--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "tailwindcss": "^3.4.4"
   }
 }
